src/snapshots/tkr_qulacs_worker__tests__chemistry_example_circuit_seeded.snap
---
source: src/main.rs
expression: result.shots
---
OutcomeArray {
    width: 8,
    array: [
        [
            210,
        ],
        [
            102,
        ],
        [
            154,
        ],
        [
            102,
        ],
        [
            153,
        ],
        [
            45,
        ],
        [
            209,
        ],
        [
            209,
        ],
        [
            153,
        ],
        [
            23,
        ],
    ],
}
