src/snapshots/tkr_qulacs_worker__tests__phased_x_zz_phase_circuit_seeded.snap
---
source: src/main.rs
expression: result.shots
---
OutcomeArray {
    width: 10,
    array: [
        [
            0,
        ],
        [
            128,
        ],
        [
            0,
        ],
        [
            128,
        ],
        [
            192,
        ],
        [
            192,
        ],
        [
            64,
        ],
        [
            64,
        ],
        [
            64,
        ],
        [
            192,
        ],
    ],
}
