src/snapshots/tkr_qulacs_worker__tests__zz_phase_circuit_seeded.snap
---
source: src/main.rs
expression: result.shots
---
OutcomeArray {
    width: 10,
    array: [
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
        [
            0,
        ],
    ],
}
